--- a/pre-build/scss/component/footer.scss
+++ b/pre-build/scss/component/footer.scss
@@ -1,8 +1,9 @@
+@import '../common/variable.scss';
 
 .wrap.pre{
     &.footerBasic{
         .contents{width: 100%;}
-        .contBox{position: relative; min-height: calc(100vh - 322px); text-align: center; font-size: 36px; color: #fff; font-family: 'Noto Sans';
+        .contBox{position: relative; min-height: calc(100vh - 322px); text-align: center; font-size: 36px; color: $cfff; font-family: $d-fz;
         background-color: #444;
           span{position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);}
         }
@@ -12,11 +13,11 @@
               a{display: inline-block;}
               img{width: 200px;}
             }
-            .linkContainer{display: flex; padding-bottom: 40px; border-bottom: 1px solid #fff;}
+            .linkContainer{display: flex; padding-bottom: 40px; border-bottom: 1px solid $whiteBg;}
             .linkArea{flex: 0.5; margin-left: auto;
               ul{display: flex; flex-direction: column;
                 li{ 
-                  a{font-size: 16px; font-family: 'Noto Sans'; color: #fff;
+                  a{font-size: 16px; font-family: $d-fz; color: $cfff;
                     &:hover{text-decoration: underline;}
                   }
                   +li{margin-top: 10px;}
@@ -25,7 +26,7 @@
             }
             .bottomArea{
               >.inner{height: 58px; line-height: 58px;
-                p.copy{font-size: 14px; color: #fff; font-family: '맑은 고딕'; text-align: center;}
+                p.copy{font-size: 14px; color: $cfff; font-family: '맑은 고딕'; text-align: center;}
               }
             }
           }
@@ -39,11 +40,11 @@
                     a{display: inline-block;}
                     img{width: 200px;}
                 }
-                .linkContainer{display: flex; padding-bottom: 40px; border-bottom: 1px solid #fff;}
+                .linkContainer{display: flex; padding-bottom: 40px; border-bottom: 1px solid $whiteBg;}
                 .linkArea{flex: 0.5; margin-left: auto;
                     ul{display: flex; flex-direction: column;
                         li{ 
-                            a{font-size: 16px; font-family: 'Noto Sans'; color: #fff;
+                            a{font-size: 16px; font-family: $d-fz; color: $cfff;
                             &:hover{text-decoration: underline;}
                             }
                             +li{margin-top: 10px;}
@@ -52,7 +53,7 @@
                 }
                 .bottomArea{
                     >.inner{height: 58px; line-height: 58px;
-                        p.copy{font-size: 14px; color: #fff; font-family: '맑은 고딕'; text-align: center;}
+                        p.copy{font-size: 14px; color: $cfff; font-family: '맑은 고딕'; text-align: center;}
                     }
                 }
             }
