--- a/pre-build/scss/common/variable.scss
+++ b/pre-build/scss/common/variable.scss
@@ -1,9 +1,12 @@
 
 /* text color */
 $c20 : #202020 !default;  
+$c222 : #222 !default;
 $c333 : #333 !default;
 $c70 : #707070 !default;
 $cddd : #ddd !default;
+$c000 : #000 !default;
+$c-ccc : #ccc !default;
 $cfff : #fff !default;
 $d-fz : 'Noto Sans'; //기본 폰트
 $emphasisType01 : #266bf7 !default;
@@ -12,3 +15,7 @@ $emphasisType02: #1694d2 !default;
 /* background */
 $blueBg : $emphasisType01;
 $whiteBg : $cfff;
+$dddBg : $cddd;
+$_222Bg : $c222;
+$_333Bg : $c333;
+$blackBg : $c000;
