--- a/pre-build/scss/component/input.scss
+++ b/pre-build/scss/component/input.scss
@@ -1,13 +1,15 @@
+@import '../common/variable.scss';
+
 .customSelect{display: flex; flex: 1;
     >ul{flex: 1;
-      >li{flex: 1; height: 30px; position: relative; border: 1px solid #ddd;
+      >li{flex: 1; height: 30px; position: relative; border: 1px solid $dddBg;
       text-indent: 5px; box-sizing: border-box; background: url("../../images/ico/ico-select-down.svg")no-repeat center right 10px;
-        span{display: block; line-height: 28px; color: #222; font-family: 'Noto Sans'; cursor: pointer;}
+        span{display: block; line-height: 28px; color: $c222; font-family: $d-fz; cursor: pointer;}
         .selList{display: none; position: absolute; top: 29px; left: -1px; width: 100%; z-index: 200; 
-        border: 1px solid #ddd; border-top: 0; border-radius: 0 0 4px 4px; background-color: #fff;
+        border: 1px solid $dddBg; border-top: 0; border-radius: 0 0 4px 4px; background-color: $whiteBg;
           li{
             &:hover{background-color: #3399ff;
-              span{color: #fff;}
+              span{color: $cfff;}
             }
           }
         }
@@ -19,23 +21,23 @@
     +.customSelect{margin-left: 10px;}
 }
 
-textarea{height: 150px; border: 1px solid #ddd; padding: 10px; box-sizing: border-box;
-    font-family: 'Noto Sans'; border-radius: 4px; color: #222; font-size: 14px; resize: none; overflow-y: auto;
-    background-color: #fff;
+textarea{height: 150px; border: 1px solid $dddBg; padding: 10px; box-sizing: border-box;
+    font-family: $d-fz; border-radius: 4px; color: $c222; font-size: 14px; resize: none; overflow-y: auto;
+    background-color: $whiteBg;
       &::placeholder{color: #aaa;}
       &:disabled{background-color: #f5f5f5;}
       &.full{width: 100%;}
 }
     
-input{height: 30px; border: 1px solid #ddd; padding-left: 5px; box-sizing: border-box; 
-font-family: 'Noto Sans'; border-radius: 4px; color: #222; background-color: #fff;
+input{height: 30px; border: 1px solid $dddBg; padding-left: 5px; box-sizing: border-box; 
+font-family: $d-fz; border-radius: 4px; color: $c222; background-color: $whiteBg;
     &.full{width: 100%;}
 }
     
 input[type="image"],input[type="color"],input[type="button"]{display: inline-block; vertical-align: middle;}
     
-.select{display: inline-block; height: 30px; border: 1px solid #ddd; padding: 0 5px; box-sizing: border-box;
-font-family: 'Noto Sans'; border-radius: 2px; color: #222; vertical-align: middle;background-color: #fff;}
+.select{display: inline-block; height: 30px; border: 1px solid $dddBg; padding: 0 5px; box-sizing: border-box;
+font-family: $d-fz; border-radius: 2px; color: $c222; vertical-align: middle;background-color: $whiteBg;}
     
 .selContainer{display: flex;
     label{display: flex;align-items: center; margin-right: 7px;}
@@ -50,9 +52,9 @@ font-family: 'Noto Sans'; border-radius: 2px; color: #222; vertical-align: middl
         }
       }
     }
-    label{vertical-align: middle; font-size: 14px; color: #222; font-family: 'Noto Sans';cursor: pointer;
+    label{vertical-align: middle; font-size: 14px; color: $c222; font-family: $d-fz;cursor: pointer;
       &:before{content: ''; display: inline-block; width: 20px; height: 20px; border-radius: 4px; box-sizing: border-box;
-      margin-right: 5px; vertical-align: sub; border: 1px solid #ddd; background-color: #fff;}
+      margin-right: 5px; vertical-align: sub; border: 1px solid $dddBg; background-color: $whiteBg;}
     }
     +.checkbox{margin-left: 10px;}
 }
@@ -60,12 +62,12 @@ font-family: 'Noto Sans'; border-radius: 2px; color: #222; vertical-align: middl
 .radio{display: inline-block; margin-right: 10px;margin-top: 0; cursor: pointer;
     input[type="radio"]{display: none;}
     &:last-child {margin-right: 0;}
-    label{position: relative; display: flex;align-items: center; font-family: "Noto Sans"; font-size: 14px; color: #141414; cursor: pointer; text-indent: 5px;
-      &:before{content: ''; display: inline-block; width: 14px; height: 14px; border: 1px solid #ddd; border-radius: 50%; background-color: #fff;}
+    label{position: relative; display: flex;align-items: center; font-family: $d-fz; font-size: 14px; color: #141414; cursor: pointer; text-indent: 5px;
+      &:before{content: ''; display: inline-block; width: 14px; height: 14px; border: 1px solid $dddBg; border-radius: 50%; background-color: $whiteBg;}
     }
     input[type="radio"]:checked+label{
       &:after{content: ''; position: absolute; top: 50%; transform: translateY(-50%); left: 5px; 
-      width: 6px;height: 6px; border-radius: 50%; background-color: #266bf7;}
+      width: 6px;height: 6px; border-radius: 50%; background-color: $blueBg;}
     }
     &.imgType{
       input[type="radio"]:checked+label{
