--- a/pre-build/scss/scss-build/footer.css
+++ b/pre-build/scss/scss-build/footer.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+/* text color */
+/* background */
 .wrap.pre.footerBasic .contents {
   width: 100%;
 }
@@ -9,7 +11,7 @@
   text-align: center;
   font-size: 36px;
   color: #fff;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   background-color: #444;
 }
 
@@ -71,7 +73,7 @@
 
 .wrap.pre.footerBasic #footer > .inner .linkArea ul li a {
   font-size: 16px;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   color: #fff;
 }
 
@@ -153,7 +155,7 @@
 
 .wrap.pre.footerFixed #footer > .inner .linkArea ul li a {
   font-size: 16px;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   color: #fff;
 }
 
