--- a/pre-build/scss/scss-build/gnb.css
+++ b/pre-build/scss/scss-build/gnb.css
@@ -1,3 +1,5 @@
+/* text color */
+/* background */
 .wrap.pre.gnbHover .container, .wrap.pre.gnb-li-hover .container, .wrap.pre.gnbFind .container {
   width: 1200px;
   margin: 0 auto;
@@ -44,7 +46,7 @@
 .wrap.pre.gnbHover #gnb ul.menuList > li > a, .wrap.pre.gnb-li-hover #gnb ul.menuList > li > a, .wrap.pre.gnbFind #gnb ul.menuList > li > a {
   min-width: 80px;
   font-size: 24px;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   color: #000;
 }
 
@@ -62,7 +64,7 @@
 .wrap.pre.gnbHover #gnb ul.menuList > li .depthTwo > li > a, .wrap.pre.gnb-li-hover #gnb ul.menuList > li .depthTwo > li > a, .wrap.pre.gnbFind #gnb ul.menuList > li .depthTwo > li > a {
   display: block;
   font-size: 16px;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   color: #444;
 }
 
