--- a/pre-build/scss/scss-build/layout.css
+++ b/pre-build/scss/scss-build/layout.css
@@ -65,7 +65,7 @@
   padding: 50px;
   border: 2px solid #000;
   font-size: 22px;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
 }
 
 .wrap.pre.bgImage .resultCont {
@@ -74,7 +74,7 @@
 
 .wrap.pre.bgImage .resultCont .imgDiv {
   height: 600px;
-  background-image: url("../images/common/1903x600.png");
+  background-image: url("../../images/common/1903x600.png");
   background-repeat: no-repeat;
 }
 
@@ -134,7 +134,7 @@
   transition: .5s;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  background: url("../images/ico/ico-down.svg") no-repeat;
+  background: url("../../images/ico/ico-down.svg") no-repeat;
 }
 
 .wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li a {
@@ -157,7 +157,7 @@
 
 .wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li > ul.leftSubMenu li a {
   display: block;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   font-size: 18px;
   color: rgba(255, 255, 255, 0.8);
   text-indent: 50px;
@@ -188,7 +188,7 @@
 
 .wrap.pre.floating #floatingMenu {
   position: fixed;
-  right: 20px;
+  right: 40px;
   bottom: 20px;
 }
 
@@ -210,13 +210,6 @@
 .wrap.pre.floating #floatingMenu .menuArea ul.menuList {
   position: absolute;
   top: -211px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
 }
 
 .wrap.pre.floating #floatingMenu .menuArea ul.menuList li {
@@ -269,7 +262,7 @@
   height: 200px;
   max-width: 200px;
   font-size: 16px;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   color: #fff;
   background-color: #000;
 }
@@ -542,7 +535,7 @@
           box-sizing: border-box;
   font-size: 16px;
   border-radius: 4px;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
   color: #fff;
   -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.35);
           box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.35);
@@ -595,7 +588,7 @@
   cursor: pointer;
   text-align: center;
   color: #000;
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
 }
 
 .tabWrap.type01 > .tabNav > .tabList > li.orange.active:before {
@@ -650,7 +643,7 @@
           box-sizing: border-box;
   text-align: center;
   background-color: #fff;
-  font-family: 'Noto sans';
+  font-family: "Noto Sans";
 }
 
 .tabWrap.typeEx > .tabNav > .tabList > li.active {
